--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="styles.css"
+</head>
 <div class="container">
   <header class="header">
     <h1 id="title" class="text-center">KEAS Studios Enquiry Form</h1>
